静态完成了

--- a/h5/public/index.html
+++ b/h5/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://lovers-1300783623.cos.ap-shanghai.myqcloud.com/web/pic/dlam.jpg">
-    <title>初始项目</title>
+    <title>极速外包</title>
     <link rel="stylesheet" href="./reset.css">
     <!-- <link rel="stylesheet" href="./iconfont.css"> -->
   </head>
